--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
             transform: translate(-50%,-50%);
             font-size: 70px;
         }
+        @media (max-width : 767px) {
+
+    
+            .clock {
+                width: 20rem;
+                height: 20rem;
+                border: 5px solid rgb(2, 132, 253);
+                border-radius: 50%;
+                margin: 50px auto;
+                position: relative;
+                padding: 2rem;
+            }
+            .container {
+                font-size: 35px;
+                margin-top: 10%;
+            }
+
+        }
+
     </style>
 
 
